--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@reach/router": "^1.3.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "style": "^0.0.3"
   },
   "scripts": {
     "start": "parcel src/index.html",
@@ -18,6 +19,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.5.2",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
@@ -26,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.5",
+    "react-bootstrap": "^1.3.0",
     "sass": "^1.26.10"
   }
 }
