--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "reach": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "style": "^0.0.3"
