--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@reach/router": "^1.3.4",
     "reach": "^1.0.1",
-    "react": "^16.13.1",
+    "react": ">=15",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "style": "^0.0.3"
   },
   "scripts": {
