--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "axios": "^0.20.0",
     "reach": "^1.0.1",
     "react": ">=15",
     "react-dom": "^16.13.1",
